--- a/x86-64+.config
+++ b/x86-64+.config
@@ -325,9 +325,9 @@ CONFIG_boost-variant-release=y
 # CONFIG_SING_BOX_WITH_GVISOR is not set
 
 # adguardhome
-#CONFIG_PACKAGE_luci-app-adguardhome=y
-#CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=y
-#CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
+CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=y
+CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
 #CONFIG_PACKAGE_adguardhome=y
 
 # bypass
