--- a/x86-64+.config
+++ b/x86-64+.config
@@ -165,7 +165,6 @@ CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libyaml=y
 CONFIG_PACKAGE_lua-maxminddb=y
-
 CONFIG_PACKAGE_luci-app-cifs-mount=y
 CONFIG_PACKAGE_luci-app-cifsd=y
 CONFIG_PACKAGE_luci-app-diskman=y
@@ -173,7 +172,6 @@ CONFIG_PACKAGE_luci-app-mosdns=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-oaf=y
-CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
@@ -355,4 +353,6 @@ CONFIG_PACKAGE_smartdns=y
 #CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_V2ray_Plugin=y
 #CONFIG_PACKAGE_luci-app-passwall2_Iptables_Transparent_Proxy=y
 
+# openclash
+#CONFIG_PACKAGE_luci-app-openclash=y
 
