--- a/x86-64+.config
+++ b/x86-64+.config
@@ -60,7 +60,7 @@ CONFIG_PACKAGE_gowebdav=y
 # CONFIG_PACKAGE_grub2-bios-setup is not set
 # CONFIG_PACKAGE_grub2-efi is not set
 CONFIG_PACKAGE_haproxy=y
-CONFIG_PACKAGE_igmpproxy=y
+# CONFIG_PACKAGE_igmpproxy=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ip6tables-extra=y
 CONFIG_PACKAGE_ip6tables-mod-nat=y
