--- a/.github/workflows/mt7620.yml
+++ b/.github/workflows/mt7620.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: 7620
+name: mt7620
 
 on:
   repository_dispatch:
@@ -35,7 +35,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: 7620.config
+  CONFIG_FILE: mt7620.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
