--- a/.github/workflows/x86-64.yml
+++ b/.github/workflows/x86-64.yml
@@ -15,6 +15,10 @@ name: x86-64
 on:
   repository_dispatch:
   workflow_dispatch:
+  push:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 18 * * *'
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
@@ -27,19 +31,8 @@ env:
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  
-#  release:
-#    types: published
-#  push:
-#    branches:
-#      - master
-#    paths:
-#      - 'x86.config'
-  schedule:
-    - cron: 0 18 * * *
-  watch:
-    types: started
-    
+ 
+   
 jobs:
   build:
     runs-on: ubuntu-22.04
